variety (0.6.0) trusty; urgency=low

  * Added Variety Slideshow integration

 -- Peter Levi <peterlevi@peterlevi.com>  Wed, 30 Dec 2015 01:45:03 +0200

variety (0.5.5) precise; urgency=low

  * Bumped the version to 0.5.5
  * Updated translation files
  * Added some more default image sources
  * Disable Latest source by default, put NSFW warning in description
  * set_wallpaper: Fix support for KDE Plasma 5
  * Fixed minor typo in Add Reddit dialog

 -- Peter Levi <peterlevi@peterlevi.com>  Sun, 20 Sep 2015 00:33:42 +0300

variety (0.5.5) precise; urgency=low

  * Bumped the version to 0.5.5
  * Updated translation files
  * Added some more default image sources
  * Disable Latest source by default, put NSFW warning in description
  * set_wallpaper: Fix support for KDE Plasma 5
  * Fixed minor typo in Add Reddit dialog

 -- Peter Levi <peterlevi@peterlevi.com>  Sun, 20 Sep 2015 00:33:04 +0300

variety (0.5.4ubuntu1) precise; urgency=low

  * 

 -- Peter Levi <peter@plpc>  Sun, 20 Sep 2015 00:27:37 +0300

variety (0.5.4) precise; urgency=low

  * Updated setup.py to not change icon paths in desktop file
  * Remove requests dependency for UnsplashDownloader
  * Remove requests dependency for UnsplashDownloader
  * More localization-related fixes
  * Fix UI of all dialogs to prevent labels from maximizing them
    horizontally
  * Localization-related fixes. Updated translations.
  * Minor update to changes and tips info
  * Smart: updated report_file to heed needs_reupload response
  * Bumping version number to 0.5.4
  * Updated dependencies in debian/control to include python-requests
  * Disable sorting of Images table by clicking in header
  * UI cosmetics on non-Unity: Add some spacing between buttons next to
    Images table
  * Fix UI of PreferencesVarietyDialog to prevent labels from maximizing
    it horizontally
  * Use explicit python2 hashbangs in all scripts, as Ubuntu will be
    moving to Python 3 as default
  * Removed some unnecessary junk files