@@ -1,6 +1,7 @@
 variety (0.6.0) trusty; urgency=low
 
-  * Added Variety Slideshow integration
+  * Added Variety Slideshow
+  * Using official Unsplash API now
 
  -- Peter Levi <peterlevi@peterlevi.com>  Wed, 30 Dec 2015 01:45:03 +0200
 
